--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,10 +37,13 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="com.vellut.geoalarm.GeofenceActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
