--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,11 +36,11 @@
 
         <activity
             android:name="com.vellut.geoalarm.MainActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -51,25 +51,26 @@
             </intent-filter>
         </receiver>
         
+        <receiver android:name="com.vellut.geoalarm.AlarmWakeUpBroadcastReceiver" />
         
-        <receiver android:name="com.vellut.geoalarm.AlarmWakeUpBroadcastReceiver" >
-        </receiver>
- 		<service android:name="com.vellut.geoalarm.AlarmWakeUpService" >
-        </service>
-        
-        <receiver android:name="com.vellut.geoalarm.ReceiveTransitionsBroadcastReceiver" >
-        </receiver>
+        <service
+            android:name="com.vellut.geoalarm.AlarmWakeUpService"
+            android:exported="false" />
+
+        <receiver android:name="com.vellut.geoalarm.ReceiveTransitionsBroadcastReceiver" />
+
         <service
             android:name="com.vellut.geoalarm.ReceiveTransitionsIntentService"
-            android:exported="false"
-            android:label="@string/app_name" >
-        </service>
-        
+            android:exported="false" />
+
+        <activity
+            android:name="com.vellut.geoalarm.SettingsActivity"
+            android:label="@string/action_settings" 
+            android:parentActivityName="com.vellut.geoalarm.MainActivity"/>
+
         <service
             android:name="com.vellut.geoalarm.GeoAlarmBootService"
-            android:exported="false"
-            android:label="@string/app_name" >
-        </service>
+            android:exported="false" />
 
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
